--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "moment": "^2.24.0",
-    "prompt": "^1.0.0",
-    "puppeteer": "^2.1.1"
+    "moment": "2.24.0",
+    "prompt": "1.0.0",
+    "puppeteer": "2.1.1"
   }
 }
